08/10/2006
OrbWeaver
- Merged upstream revisions 99 and 101
- Merged upstream brushexport plugin (exports to OBJ)

** RELEASE 0.6.0

29/09/2006
OrbWeaver
- Added Model Selector dialog with preview
- func_static entities created from brushes have "origin" key set correctly
- Fixed segfault in picomodel ASE loading code when a subset of submeshes had
  vertex colours.

03/09/2006
Crispy
- Added texture window toolbar and button to clamp textures to constant size
OrbWeaver
- Fixed problems with material names using mixed case not being displayed on brushes
- textures/common/collision now filtered out by Filter->Clips

27/08/2006
Crispy
- Removal of OpenGLBinding in favour of standard GLEW library for extension processing

** RELEASE 0.5.3

- Bugfix: selected brushes now parented to func_static and other entities
- Light texture selector highlights current shader

** RELEASE 0.5.2

16/08/2006
- Fixed lighting renderer for surfaces missing bump/specular maps

15/08/2006
- Load DDS textures from correct path ("dds/")

14/08/2006
- Ambient lighting implemented in renderer

13/08/2006
- Added light scale parameter to renderer and .game file

06/08/2006
- Added light texture selection PropertyEditor and chooser dialog

** RELEASE 0.5.1

23/07/2006
- Added new context menu with options to add light, model or entity, along
  with new dialog for selecting an entity class to create.

22/07/2006
- Merged GtkRadiant fix for func_static dragging issue

21/07/2006
- Fixed missing shaders on ASE models

17/07/2006
- Entity keyval changes now undoable and correctly set "map changed" flag to allow
  saving.

16/07/2006
- Removed .xlink processing code which causes crashes on Windows 2000

** RELEASE 0.5.0

16/07/2006
- Fixed save function silently failing when .map cannot be renamed to .bak before save
- Changed EntityInspector from a GtkPaned to a GtkVBox, adjusted size requests to allow
  for shrinkage on low-res displays.

** RELEASE 0.5pre3

15/07/2006